Address now points to a Customer and optionally an Order. This is wrong and should be Customer has an address, and Order has an address. Nevertheless it works, except that every order results in two new addresses.

--- a/Cascade.WebShop.csproj
+++ b/Cascade.WebShop.csproj
@@ -488,15 +488,14 @@
     <Compile Include="Helpers\OrderDetailSerializer.cs" />
     <Compile Include="Helpers\StringExtensions.cs" />
     <Compile Include="Migrations.cs" />
-    <Compile Include="Models\AddressPart.cs" />
-    <Compile Include="Models\CustomerPart.cs" />
+    <Compile Include="Models\Address.cs" />
+    <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\OrderDetail.cs" />
-    <Compile Include="Models\OrderRecord.cs" />
-    <Compile Include="Models\OrderRecordPart.cs" />
+    <Compile Include="Models\Order.cs" />
     <Compile Include="Models\OrderStatus.cs" />
     <Compile Include="Models\ShippingProduct.cs" />
     <Compile Include="Models\TransactionRecord.cs" />
-    <Compile Include="Models\ProductPartRecord.cs" />
+    <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductQuantity.cs" />
     <Compile Include="Models\ShoppingCartItem.cs" />
     <Compile Include="Models\ShoppingCartWidgetPart.cs" />
@@ -504,9 +503,6 @@
     <Compile Include="ResourceManifest.cs" />
     <Compile Include="Helpers\CountryCode.cs" />
     <Compile Include="Services\CustomerService.cs" />
-    <Compile Include="Services\ICustomerService.cs" />
-    <Compile Include="Services\IShoppingCart.cs" />
-    <Compile Include="Services\IWebshopSettingsService.cs" />
     <Compile Include="Services\MissingSettingsBanner.cs" />
     <Compile Include="Services\OrderService.cs" />
     <Compile Include="Services\ProductService.cs" />
